Add scan trigger for PR to prod

--- a/.github/workflows/terraform-scan.yml
+++ b/.github/workflows/terraform-scan.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [staging]
 
+  pull_request:
+    branches: [prod]
+
+
 jobs:
   terraform-check:
     name: Terraform Format & Lint
