--- a/.github/workflows/terraform-scan.yml
+++ b/.github/workflows/terraform-scan.yml
@@ -2,7 +2,7 @@ name: Terraform Security Scan
 
 on:
   push:
-    branches: [main,staging]
+    branches: [staging]
 
   pull_request:
     branches: [prod]
