--- a/.github/workflows/ansible-deploy.yml
+++ b/.github/workflows/ansible-deploy.yml
@@ -14,10 +14,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install Ansible + Boto3
+      - name: Install boto and dependencies for dynamic inventory
         run: |
-          sudo apt update
-          sudo apt install -y ansible python3-boto3
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
+          pip3 install boto3 botocore
+
 
       - name: Run Ansible Playbook
         run: |
